/*
 * Copyright 2015 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package squareup.protos.namecollisions;

option java_package = "com.squareup.wire.protos.namecollisions";

message Message {
  optional string unknownFields = 1;
  optional string other = 2;
  optional string o = 3;
  optional string result = 4;
  optional string hashCode = 5;
  optional string serialVersionUID = 6;
  optional string ADAPTER = 7;
  optional string MESSAGE_OPTIONS = 8;
  optional string this = 9;
  optional string message = 10;
}
